Import shell env variables to cmake by $ENV{VAR} +set(V4L2_LIB_DIR $ENV{V4L2_LIB_DIR}) +set(V4L2_LIB_OUT $ENV{V4L2_LIB_OUT} )

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,9 @@ PROJECT( biotrump-cv )
 # ----------------------------------------------------------------------------
 # Process subdirectories
 # ----------------------------------------------------------------------------
+#$ENV{VAR} to get shell env
+set(V4L2_LIB_DIR $ENV{V4L2_LIB_DIR})
+set(V4L2_LIB_OUT $ENV{V4L2_LIB_OUT} )
 add_subdirectory(v4l2/v4l2-lib ${V4L2_LIB_OUT})
 add_subdirectory(v4l2/v4l-capture ${V4L2_CAPTURE_OUT})
 add_subdirectory(pico)
