1. ./config.sh to repo sync cv repos. The default branch is 2.4.x bonding to openCV's release. 2. ./build.sh [-j#] [target]: if there is no args, it will build all. -j# : # the concurrent building threads. target : if target is specified, it will build the specified target, like openCV. 3. All output will be under "out" folder.

--- a/.gitignore
+++ b/.gitignore
@@ -13,10 +13,10 @@ tags
 tegra/
 
 #ignore cmake meta files
-CMakeCache.txt
-CMakeFiles
-Makefile
-*.cmake
+#CMakeCache.txt
+#CMakeFiles
+#Makefile
+#*.cmake
 
 ##ignore the sub folders managed by repos
 openCV
