--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,6 +24,16 @@ set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${BCV_BINARY_DIR}/lib)
 include(cmake/CVEnvImport.cmake)
 
 set(MAKE_FLAGS $ENV{MAKE_FLAGS})
+
+# ----------------------------------------------------------------------------
+#openMP to avoid link error : omp_xxx error!
+# undefined reference to `GOMP_loop_dynamic_start
+#pass the OPENMP_FOUND to subfolders
+find_package(OpenMP)
+if(OPENMP_FOUND)
+	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
+	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
+endif()
 #set variable from shell's env var by $ENV{env_var}
 # ----------------------------------------------------------------------------
 # openCV for x86
@@ -55,15 +65,8 @@ else(ANDROID_NDK)
 endif(ANDROID_NDK)
 endif(0)
 # ----------------------------------------------------------------------------
+
 if(0)
-	# ----------------------------------------------------------------------------
-	#openMP to avoid link error : omp_xxx error!
-	# undefined reference to `GOMP_loop_dynamic_start
-	find_package(OpenMP)
-	if(OPENMP_FOUND)
-		set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
-		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
-	endif()
 	# ----------------------------------------------------------------------------
 	#opencv should be built first!
 	set(OpenCV_DIR $ENV{OPENCV_OUT})
@@ -86,7 +89,18 @@ endif(0)
 #add_subdirectory(v4l2/v4l2-lib ${V4L2_LIB_OUT})
 #add_subdirectory(v4l2/v4l-capture ${V4L2_CAPTURE_OUT})
 #add_subdirectory(dsp/ica)
-add_subdirectory(v4l2/v4l2-lib)
+
+if(NOT "$ENV{V4L2_LIB_DIR}" STREQUAL "")
+set(V4L2_LIB_DIR $ENV{V4L2_LIB_DIR} )
+message( "V4L2_LIB_DIR=${V4L2_LIB_DIR}" )
+find_path(V4L2_INC capture-v4l2.h
+			HINTS "${V4L2_LIB_DIR}" )
+message( "V4L2_INC=${V4L2_INC}" )
+if(V4L2_INC)
+	add_subdirectory(v4l2/v4l2-lib)
+	include_directories("${V4L2_INC}")
+endif(V4L2_INC)
+endif(NOT "$ENV{V4L2_LIB_DIR}" STREQUAL "")
 #add_subdirectory(v4l2/v4l-capture)
 #add_subdirectory(cv/rPPG)
 # --------------------------------------------------
