x86_64 build: openCV v4l2/v4l2-lib dsp/ATLAS dsp/ffts dsp/lib cv/pico cv/rPPG How to build the whole proejct: mkdir -p $BIOTRUMP_OUT cd $BIOTRUMP_OUT cmake .. make

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,7 @@ set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${BCV_BINARY_DIR}/lib)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${BCV_BINARY_DIR}/lib)
 # --------------------------------------------------
 #export ENVs to cmake subproejcts
+#set variable from shell's env var by $ENV{env_var}
 include(cmake/CVEnvImport.cmake)
 set(BCV_ENV_EXPORTED "1")
 
@@ -33,7 +34,40 @@ if(OPENMP_FOUND)
 	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
 	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
 endif()
-#set variable from shell's env var by $ENV{env_var}
+
+# --------------------------------------------------
+# Make a target to generate the documentation.  If Doxygen isn't installed, then
+# I guess this option will just be unavailable.
+find_package(Doxygen)
+
+if(ANDROID_NDK)
+find_host_package(Doxygen)
+endif(ANDROID_NDK)
+
+if (DOXYGEN_FOUND)
+  # Preprocess the Doxyfile.  This is done before 'make doc'.
+  add_custom_command(OUTPUT ${CMAKE_BINARY_DIR}/Doxyfile
+      PRE_BUILD
+      COMMAND ${CMAKE_COMMAND} -D DESTDIR="${CMAKE_BINARY_DIR}" -P
+          "${CMAKE_CURRENT_SOURCE_DIR}/CMake/GenerateDoxyfile.cmake"
+      WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}"
+      COMMENT "Creating Doxyfile to generate Doxygen documentation"
+  )
+
+  # Generate documentation.
+  add_custom_target(doc
+      COMMAND "${DOXYGEN_EXECUTABLE}" "${CMAKE_BINARY_DIR}/Doxyfile"
+      DEPENDS "${CMAKE_BINARY_DIR}/Doxyfile"
+      WORKING_DIRECTORY "${CMAKE_BINARY_DIR}"
+      COMMENT "Generating API documentation with Doxygen"
+  )
+
+  install(DIRECTORY ${CMAKE_BINARY_DIR}/doc/html
+      DESTINATION share/doc/mlpack
+      COMPONENT doc
+      OPTIONAL
+  )
+endif (DOXYGEN_FOUND)
 # ----------------------------------------------------------------------------
 # openCV for x86
 if(ANDROID_NDK)
@@ -49,45 +83,7 @@ else(ANDROID_NDK)
 endif(ANDROID_NDK)
 
 # ----------------------------------------------------------------------------
-# dsp
-if(0)
-if(ANDROID_NDK)
-	#buld dsp, static
-	add_custom_target ( dsp
-		COMMAND bash ./build_NDK_cmake.sh
-		WORKING_DIRECTORY ${BCV_SOURCE_DIR}/dsp )
-else(ANDROID_NDK)
-	#x86 ubuntu :
-	add_custom_target ( dsp
-		COMMAND bash ./build_linux_cmake.sh
-		WORKING_DIRECTORY ${BCV_SOURCE_DIR}/dsp )
-endif(ANDROID_NDK)
-endif(0)
-# ----------------------------------------------------------------------------
-
-if(0)
-	# ----------------------------------------------------------------------------
-	#opencv should be built first!
-	set(OpenCV_DIR $ENV{OPENCV_OUT})
-	message("++++OpenCV_DIR:${OpenCV_DIR}")
-	FIND_PACKAGE( OpenCV REQUIRED)
-	if(OpenCV_FOUND)
-		message("found")
-		message( "OpenCV_INCLUDE_DIRS:${OpenCV_INCLUDE_DIRS}" )
-		message( "OpenCV_INCLUDES:${OpenCV_INCLUDES}")
-		message( "OpenCV_LIBRARIES:${OpenCV_LIBRARIES}")
-		message( "OpenCV_LIBS:${OpenCV_LIBS}")
-		message( "OpenCV_DEFINITIONS:${OpenCV_DEFINITIONS}")
-	else()
-		message(FATAL_ERROR "openCV not foud")
-	endif()
-endif(0)
-# ----------------------------------------------------------------------------
 # Process subdirectories
-# ----------------------------------------------------------------------------
-#add_subdirectory(v4l2/v4l2-lib ${V4L2_LIB_OUT})
-#add_subdirectory(v4l2/v4l-capture ${V4L2_CAPTURE_OUT})
-#add_subdirectory(dsp/ica)
 # ----------------------------------------------------------------------------
 #v4l2/v4l2-lib
 # ----------------------------------------------------------------------------
@@ -103,37 +99,51 @@ if(V4L2_INC)
 	include_directories("${V4L2_INC}")
 endif(V4L2_INC)
 # ----------------------------------------------------------------------------
+add_subdirectory(dsp)
+# ----------------------------------------------------------------------------
 #cv/pico
 # ----------------------------------------------------------------------------
-if("${PICO_DIR}" STREQUAL "")
-	set(PICO_DIR ${BCV_SOURCE_DIR}/cv/pico )
-endif()
+#if("${PICO_DIR}" STREQUAL "")
+#	set(PICO_DIR ${BCV_SOURCE_DIR}/cv/pico )
+#endif()
 message( "PICO_DIR=${PICO_DIR}" )
 find_path(PICO_INC picornt.h
 			HINTS "${PICO_DIR}/rnt" )
 message( "PICO_INC=${PICO_INC}" )
 if(PICO_INC)
-
 	add_subdirectory(cv/pico)
 	include_directories("${PICO_INC}")
 endif(PICO_INC)
-
-#add_subdirectory(v4l2/v4l-capture)
-#add_subdirectory(cv/rPPG)
+# ----------------------------------------------------------------------------
+#cv/rPPG
+# ----------------------------------------------------------------------------
+#if(rPPG_DIR)
+#	add_subdirectory(cv/rPPG)
+if(ANDROID_NDK)
+	#buld openCV, static
+#	add_custom_target ( opencv
+#		COMMAND bash ./cmake_android_arm.sh
+#		WORKING_DIRECTORY ${BCV_SOURCE_DIR}/openCV )
+else(ANDROID_NDK)
+	#x86 ubuntu : buld openCV, static
+	add_custom_target ( rPPG
+		COMMAND bash ./build_x86_cmake.sh ${MAKE_FLAGS}
+		WORKING_DIRECTORY ${rPPG_DIR} )
+endif(ANDROID_NDK)
+#endif(rPPG_DIR)
 # --------------------------------------------------
 if(ANDROID_NDK)
 	add_executable(dummy
 		dummy.c
 	)
 else(ANDROID_NDK)
-
 	add_executable(dummy
 		dummy.c
 	)
-
 	#opencv should be built first before all projects are built.
 	add_dependencies(dummy
 					opencv
+					rPPG
 	#				dsp
 					)
 endif(ANDROID_NDK)
